(OSE) Fixed display issue on event list which was caused by the No Image css being too tall.  Also capitalized Image

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -301,3 +301,6 @@ a.red
 a.red:hover
   color: red
   text-decoration: underline
+  
+.event-icon-container
+  height: 80px
